--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Recipe</title>
-</head>
-<body>
-    <h1>Pizza</h1>
-</body>
+  </head>
+  <body>
+    <h1>Pizza Recipe</h1>
+    <img src="./images/pizza.webp" />
+    <h2>It's All in the Pan</h2>
+    <p>
+      A signature characteristic of Detroit-style pizza is its squared shape and
+      crispy edged crust. So, in this case the pan is just as important as the
+      other ingredients. The original pizzas were made in thick blue steel pans
+      that were originally manufactured to store auto parts. Today, the same
+      anodized steel style pan is used, sans the auto parts. A brand to check
+      out at home is made by LloydsPans, which is the brand of pan Chef John
+      uses in his recipe for Detroit-Style Pizza. (Yes, it's a rectangular pan,
+      but the pizza is called "square." That's not confusing at all.)
+    </p>
+
+    <h2>The Dough and Crust</h2>
+    <p>
+      When it comes to making the dough, you'll want to use bread flour to
+      achieve that airy, focaccia-like texture. You'll actually proof the dough
+      in the pan you are cooking in, which makes it easier (at least for cleanup
+      purposes). As for the crust, it's one of the most important parts of this
+      style of pizza. To achieve that crispy crust, you want to make sure that
+      you have a well-greased pan. You'll want to take that pizza out of the pan
+      to cool as soon as you can, so the crust stays crisp and doesn't get
+      soggy. Another key to the crust is the way the cheese melds with it. Note
+      that the cheese is placed all the way to the edges to achieve those
+      coveted golden-brown cheesy crust corners.
+    </p>
+
+    <h3>Ingredients needed:</h3>
+    <ul>
+      <li>Toppings</li>
+      <li>Sauce</li>
+      <li>cheese</li>
+
+      
+    </ul>
+  </body>
 </html>
