--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -34,13 +34,22 @@
       coveted golden-brown cheesy crust corners.
     </p>
 
-    <h3>Ingredients needed:</h3>
+    <h3>Ingredients/Steps:</h3>
     <ul>
       <li>Toppings</li>
       <li>Sauce</li>
       <li>cheese</li>
-
-      
     </ul>
+    <ol>
+      <li>Bake</li>
+      <li>Cook</li>
+      <li>Eat</li>
+    </ol>
+
+     <ul>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 1</a></li>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+  </ul>
   </body>
 </html>
